# huggingface-text-server

./: README.md  pyproject.toml  requirements.txt  server.py
src/: config.py
src/controller/: functions.py  handler.py  instruct_pipelines.py
src/router/: route.py  route_depends.py
src/test/: test.py  test_dolly.py
