[tool.poetry]
name = "huggingface-text-server"
version = "0.1.0"
description = ""
authors = ["kohei <koheitech001@gmail.com>"]
license = "Apach-2.0"
readme = "README.md"
packages = [{include = "huggingface_text_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
transformers = "^4.28.1"
accelerate = "^0.18.0"
sentencepiece = "^0.1.98"
protobuf = "3.20"
torch = "^2.0.0+cpu"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
